<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ang.mov.activities.PersonDetailActivity"
    tools:showIn="@layout/activity_person_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3136435737091654/3885932324">
        </com.google.android.gms.ads.AdView>
        <TextView
            android:id="@+id/text_view_bio_header_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/biography"
            android:textColor="@color/defaultTextColor"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_bio_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ellipsize="end"
            android:textColor="@color/defaultTextColor"
            android:maxLines="7" />

        <TextView
            android:id="@+id/text_view_read_more_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/read_more"
            android:textAlignment="center"
            android:textColor="@color/defaultTextColor"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_movie_cast_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/movie_cast"
            android:textColor="@color/defaultTextColor"
            android:textSize="20sp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_movie_cast_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/text_view_tv_cast_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_cast"
            android:textColor="@color/defaultTextColor"
            android:textSize="20sp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_tv_cast_person_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
