<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ang.mov3.activities.MovieDetailActivity"
    android:background="@android:color/black"
    tools:showIn="@layout/activity_movie_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView1"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3136435737091654/6224177516">
        </com.google.android.gms.ads.AdView>
        <LinearLayout
            android:id="@+id/layout_rating_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_star_black_24dp"
                android:textColor="@color/defaultTextColor"
                android:tint="#F9A825" />

            <TextView
                android:id="@+id/text_view_rating_movie_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="4dp"
                android:textColor="@color/defaultTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="/10"
                android:textColor="@color/defaultTextColor"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_overview_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:textColor="@color/defaultTextColor"
            android:maxLines="7" />

        <TextView
            android:id="@+id/text_view_read_more_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/read_more"
            android:textColor="@color/defaultTextColor"
            android:textAlignment="center"

            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_details_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:textColor="@color/defaultTextColor"
                android:text="@string/movie_details"
                 />

            <TextView
                android:id="@+id/text_view_details_movie_detail"
                android:layout_width="wrap_content"
                android:textColor="@color/defaultTextColor"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_trailer_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/defaultTextColor"
            android:text="@string/trailers"
            android:textSize="20sp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_trailers_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />

        <View
            android:id="@+id/view_horizontal_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_cast_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/cast"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_cast_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:nestedScrollingEnabled="false" />

        <TextView
            android:id="@+id/text_view_similar_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/similar_movies"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_similar_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:nestedScrollingEnabled="false" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
